tests/baselines/reference/emitter.asyncGenerators.functionDeclarations.esnext.errors.txt
tests/cases/conformance/emitter/esnext/asyncGenerators/F4.ts(2,22): error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.


==== tests/cases/conformance/emitter/esnext/asyncGenerators/F1.ts (0 errors) ====
    async function * f1() {
    }
==== tests/cases/conformance/emitter/esnext/asyncGenerators/F2.ts (0 errors) ====
    async function * f2() {
        const x = yield;
    }
==== tests/cases/conformance/emitter/esnext/asyncGenerators/F3.ts (0 errors) ====
    async function * f3() {
        const x = yield 1;
    }
==== tests/cases/conformance/emitter/esnext/asyncGenerators/F4.ts (1 errors) ====
    async function * f4() {
        const x = yield* [1];
                         ~~~
!!! error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
    }
==== tests/cases/conformance/emitter/esnext/asyncGenerators/F5.ts (0 errors) ====
    async function * f5() {
        const x = yield* (async function*() { yield 1; })();
    }
==== tests/cases/conformance/emitter/esnext/asyncGenerators/F6.ts (0 errors) ====
    async function * f6() {
        const x = await 1;
    }
==== tests/cases/conformance/emitter/esnext/asyncGenerators/F7.ts (0 errors) ====
    async function * f7() {
        return 1;
    }
    